--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
     "next": "^14.2.3",
+    "openai": "^4.39.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "8.0.0"
