--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openai": "^4.39.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
